<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/green_mpv"
    android:elevation="5dp"
    android:minHeight="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green_mpv"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleTv"
            android:text="@string/inicio"
            style="@style/style_tv_inicio" />

        <TextView
            android:id="@+id/titleMercaTv"
            android:text="@string/merca_plaza"
            style="@style/style_tv_mpv" />

        <TextView
            android:id="@+id/titlePlazaTv"
            android:text="@string/popular"
            style="@style/style_tv_popular" />

    </LinearLayout>

</android.support.v7.widget.Toolbar>