<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/green_mpv"
    tools:context=".LoginActivity"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/action_bar_login"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <ImageView
            android:id="@+id/logo_title"
            android:src="@mipmap/logo_action_bar"
            style="@style/style_image_inicio_mpv" />

        <RelativeLayout style="@style/style_ry_form">

            <LinearLayout style="@style/style_ly_form_2">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/emailLogin"
                        android:hint="@string/example_email_com"
                        style="@style/style_edtv_correo" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/passwordLogin"
                        android:hint="@string/contrase_a"
                        style="@style/style_edtv_contrasen_a" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:text="@string/olvidaste_la_contrase_a"
                    tools:ignore="RtlHardcoded"
                    style="@style/style_tv_olvido_contrasen_a" />


                <Button
                    android:text="@string/ingresar"
                    android:id="@+id/btnSignIn"
                    style="@style/style_btn_ingresar" />

                <TextView
                    android:id="@+id/dontHaveAccount"
                    android:text="@string/no_tienes_una_cuenta_aun_registrate"
                    style="@style/style_tv_no_tienes_cuenta" />
            </LinearLayout>
        </RelativeLayout>

        <ImageButton
            android:id="@+id/user_profile_photo"
            android:src="@mipmap/mank"
            style="@style/style_image_user_iniciar" />
    </RelativeLayout>
</ScrollView>